--- a/Modulo2/lab1/index.html
+++ b/Modulo2/lab1/index.html
@@ -4,23 +4,23 @@
 	<title>
 		<h2>Diplomado APM-5</h2>
 	</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
    <div id="global">
+    </div>
       <div id="cabecera">
              Maquetandoo.......
       </div>
       <div id="navegacion">
             supuestamente el menu
       </div>
-      <div id="principal">
-             Contenidos de pagina web
-      </div>
+      
       
       <div id="pie">
              contenido de footer
       </div>
-   </div>
+  
 </body>
 </html>
